--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">kotlin-mvvm-boilerplate</string>
+    <string name="btn_login">Login</string>
+    <string name="title_home">Home</string>
 </resources>
